--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^24.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "vitest": "^4.0.5"
+  },
+  "dependencies": {
+    "jsdom": "^27.1.0"
   }
 }
